--- a/notebooks/iLQR_implementation_quat.ipynb
+++ b/notebooks/iLQR_implementation_quat.ipynb
@@ -64,28 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "12-element Array{Float64,1}:\n",
-       " -125000.0\n",
-       "      10.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "    5500.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "       0.0\n",
-       "       0.0"
+       "   -3.5145e6\n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       " 5500.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     \n",
+       "    0.0     "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,18 +94,21 @@
     "# Initial conditions\n",
     "\n",
     "# Iniitial altitude\n",
-    "x_0 = - 125000.0\n",
-    "y_0 = 10.0\n",
+    "x_0 = - 125000.0 - 3389.5e3\n",
     "\n",
     "# Initial speed\n",
     "v_0 = 5500 * [1, 0, 0]\n",
     "\n",
     "# Initial orientation\n",
-    "θ = 0.0\n",
+    "# q_0 = [1, 0, 0, 0]\n",
+    "q_0 = [1, 0, 0, 0.04]\n",
+    "q_0 = q_0 / norm(q_0)\n",
+    "    \n",
+    "θ = 0.08\n",
     "r = tan(θ / 4) .* [0, 0, 1]\n",
-    "\n",
     "# Initial state\n",
-    "X_0 = [x_0, y_0, 0, r[1], r[2], r[3], v_0[1], v_0[2], v_0[3], 0, 0, 0]"
+    "X_0_quat = [x_0, 0, 0, q_0[1], q_0[2], q_0[3], q_0[4], v_0[1], v_0[2], v_0[3], 0, 0, 0]\n",
+    "X_0 = [x_0, 0, 0, r[1], r[2], r[3], v_0[1], v_0[2], v_0[3], 0, 0, 0]"
    ]
   },
   {
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +129,7 @@
        "TrajectoryOptimization.AnalyticalModel(entry_vehicle_simplified_dynamics!, 12, 12, [0], Dict{Symbol,Any}(:evals=>0))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,14 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DimensionMismatch",
+     "evalue": "DimensionMismatch(\"second dimension of A, 13, does not match length of x, 12\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"second dimension of A, 13, does not match length of x, 12\")",
+      "",
+      "Stacktrace:",
+      " [1] gemv!(::Array{Float64,1}, ::Char, ::Array{Float64,2}, ::Array{Float64,1}) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:346",
+      " [2] mul! at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:64 [inlined]",
+      " [3] * at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:46 [inlined]",
+      " [4] LQRCost(::Array{Float64,2}, ::Array{Float64,2}, ::Array{Float64,2}, ::Array{Float64,1}) at /home/simon/.julia/packages/TrajectoryOptimization/jc3AI/src/objective.jl:51",
+      " [5] top-level scope at In[5]:18"
+     ]
+    }
+   ],
    "source": [
     "# Cost Function\n",
     "\n",
     "# Stage cost\n",
-    "Q_diag = 1e-4 * [0, 1e1, 1e1, 1e0, 1e0, 1e0, 0, 1e-2, 1e-2, 1e0, 1e0, 1e0]\n",
+    "Q_diag = 1e-4 * [0, 1e1, 1e1, 1e0, 1e0, 1e0, 1e0, 0, 1e-2, 1e-2, 1e0, 1e0, 1e0]\n",
     "Q = convert(Array{Float64,2}, Diagonal(Q_diag))\n",
     "\n",
     "# Control cost\n",
@@ -168,12 +187,12 @@
     "R = convert(Array{Float64,2}, Diagonal(R_diag))\n",
     "\n",
     "# Final stage cost\n",
-    "Qf_diag = 1e-1 * [0, 1e1, 1e1, 1e0, 1e0, 1e0, 0, 1e-2, 1e-2, 1e0, 1e0, 1e0]\n",
+    "Qf_diag = 1e-1 * [0, 1e1, 1e1, 1e0, 1e0, 1e0, 1e0, 0, 1e-2, 1e-2, 1e0, 1e0, 1e0]\n",
     "Qf = convert(Array{Float64,2}, Diagonal(Qf_diag))\n",
     "\n",
     "# Final state objective\n",
     "xf = zeros(n)\n",
-    "xf[1] = - 125000.0 - 3389.5e3 + 25000\n",
+    "xf[4] = 1\n",
     "\n",
     "cost_function = LQRCost(Q, R, Qf, xf);"
    ]
@@ -187,9 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: cost_function not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: cost_function not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[6]:10"
+     ]
+    }
+   ],
    "source": [
     "# Final time \n",
     "tf = 5.0\n",
@@ -214,30 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Solving Constrained Problem...\n",
-      "└ @ TrajectoryOptimization /home/simon/.julia/packages/TrajectoryOptimization/jc3AI/src/ilqr_methods.jl:282\n"
-     ]
-    },
-    {
-     "ename": "ErrorException",
-     "evalue": "Bad initial control sequence",
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: constrained_objective not defined",
      "output_type": "error",
      "traceback": [
-      "Bad initial control sequence",
+      "UndefVarError: constrained_objective not defined",
       "",
       "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] #_solve#157(::Array{Any,1}, ::Array{Any,1}, ::ConstrainedVectorResults, ::BenchmarkTools.BenchmarkGroup, ::Function, ::Solver{TrajectoryOptimization.AnalyticalModel,ConstrainedObjective{QuadraticCost{Array{Float64,2},Array{Float64,2},Array{Float64,1},Float64}}}, ::Array{Float64,2}, ::Array{Float64,2}) at /home/simon/.julia/packages/TrajectoryOptimization/jc3AI/src/solve.jl:136",
-      " [3] _solve(::Solver{TrajectoryOptimization.AnalyticalModel,ConstrainedObjective{QuadraticCost{Array{Float64,2},Array{Float64,2},Array{Float64,1},Float64}}}, ::Array{Float64,2}, ::Array{Float64,2}) at /home/simon/.julia/packages/TrajectoryOptimization/jc3AI/src/solve.jl:81 (repeats 2 times)",
-      " [4] solve(::Solver{TrajectoryOptimization.AnalyticalModel,ConstrainedObjective{QuadraticCost{Array{Float64,2},Array{Float64,2},Array{Float64,1},Float64}}}, ::Array{Float64,2}) at /home/simon/.julia/packages/TrajectoryOptimization/jc3AI/src/solve.jl:38",
-      " [5] top-level scope at In[25]:8"
+      " [1] top-level scope at In[7]:3"
      ]
     }
    ],
@@ -248,58 +267,23 @@
     "# Initial control trajectory\n",
     "U0 = zeros(m, N-1);\n",
     "# Solving the problem\n",
-    "X0 = rollout(solver, U0)\n",
     "results, stats = solve(solver, U0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12-element Array{Float64,1}:\n",
-       " -123924.09421795925         \n",
-       "       9.999999997155994     \n",
-       "      -8.585972445719107e-6  \n",
-       "       3.3855792025784457e-15\n",
-       "      -4.8828720989655325e-6 \n",
-       "       2.011071389575188e-9  \n",
-       "    5056.335884567886        \n",
-       "      -6.819052812639642e-7  \n",
-       "      -0.0017047830931423045 \n",
-       "       4.1905466107677826e-15\n",
-       "      -0.0062274100432686726 \n",
-       "       2.5138345095113115e-6 "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X0\n",
-    "[TrajectoryOptimization.stage_cost(cost_function,X0[:,i],U0[:,i]) for i =1:N-1]\n",
-    "X0[:, 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "UndefVarError",
-     "evalue": "UndefVarError: results not defined",
+     "evalue": "UndefVarError: solver not defined",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: results not defined",
+      "UndefVarError: solver not defined",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[24]:85"
+      " [1] top-level scope at In[8]:85"
      ]
     }
    ],
@@ -624,8 +608,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "5f929334788b4e988ac38c84907c9b92",
-   "lastKernelId": "d87aafda-e702-4c05-ba2e-cdb15445febb"
+   "lastCommId": "7b5be0d1cad84e65a63a70e950cf8798",
+   "lastKernelId": "cbef56d4-35ee-452b-9b0c-9e3f9e6407b9"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
