--- a/notebooks/stabilty_analysis.ipynb
+++ b/notebooks/stabilty_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "entry_vehicle_simplified_dynamics (generic function with 1 method)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,15 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = Dict(\"r_min\" => 0.001, # smallest radius of the cone [m]\n",
     "              \"r_max\" => 1.30, # largest radius of the cone [m]\n",
-    "              \"δ\" => 45 / 360 * 2 * pi, # opening angle of the cone [rad]\n",
+    "              \"δ\" => 40 / 360 * 2 * pi, # opening angle of the cone [rad]\n",
     "              \"m\" => 569.7, # mass of the Phoenix entry system [kg]\n",
-    "              \"x_g\" => -0.150, # axial center-of-gravity location [m]\n",
+    "              \"x_g\" => 0.10, # axial center-of-gravity location [m]\n",
     "              \"c\" => 1.20, # distance between the radial axis and the cluster of thrusters[m]\n",
     "              \"F_max\" => 36.0, # maximum force applied by the thrusters [N]\n",
     "              \"Jxx\" => 293.15, # Phoenix entry system [kg.m^2]\n",
@@ -83,47 +83,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13-element Array{Float64,1}:\n",
-       "   -3.5145e6\n",
-       "    0.0     \n",
-       "    0.0     \n",
-       "    1.0     \n",
-       "    0.0     \n",
-       "    0.0     \n",
-       "    0.0     \n",
-       " 5500.0     \n",
-       "    0.0     \n",
-       "    0.0     \n",
-       "    0.0     \n",
-       "    0.0     \n",
-       "    0.0     "
+       "12-element Array{Float64,1}:\n",
+       " -125000.0\n",
+       "      10.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "    5500.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "       0.0\n",
+       "       0.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Iniitial altitude\n",
-    "x_0 = - 125000.0 - 3389.5e3\n",
+    "# x_0 = - 125000.0 - 3389.5e3\n",
+    "\n",
+    "# # Initial speed\n",
+    "# v_0 = 5500 * [1, 0, 0]\n",
+    "\n",
+    "# # Initial orientation\n",
+    "# q_0 = [1, 0, 0, 0]\n",
+    "# # q_0 = [0.999, 0, 0, 0.04]\n",
+    "# q_0 = q_0 / norm(q_0)\n",
+    "    \n",
+    "# # Initial state\n",
+    "# X_0 = [x_0, 0, 0, q_0[1], q_0[2], q_0[3], q_0[4], v_0[1], v_0[2], v_0[3], 0, 0, 0]\n",
+    "\n",
+    "# Initial conditions\n",
+    "\n",
+    "# Iniitial altitude\n",
+    "x_0 = - 125000.0\n",
+    "y_0 = 10.0\n",
     "\n",
     "# Initial speed\n",
     "v_0 = 5500 * [1, 0, 0]\n",
     "\n",
     "# Initial orientation\n",
-    "q_0 = [1, 0, 0, 0]\n",
-    "# q_0 = [0.999, 0, 0, 0.04]\n",
-    "q_0 = q_0 / norm(q_0)\n",
-    "    \n",
+    "θ = 0.0\n",
+    "r = tan(θ / 4) .* [0, 0, 1]\n",
+    "\n",
     "# Initial state\n",
-    "X_0 = [x_0, 0, 0, q_0[1], q_0[2], q_0[3], q_0[4], v_0[1], v_0[2], v_0[3], 0, 0, 0]"
+    "X_0 = [x_0, y_0, 0, r[1], r[2], r[3], v_0[1], v_0[2], v_0[3], 0, 0, 0]"
    ]
   },
   {
@@ -145,26 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "10-element Array{Complex{Float64},1}:\n",
-       "                     0.0 + 0.0im              \n",
-       "                     0.0 + 0.0im              \n",
-       "   1.5163176581012294e-7 + 49.73032010837139im\n",
-       "   1.5163176581012294e-7 - 49.73032010837139im\n",
-       "   1.5163177025101504e-7 + 49.73031462109581im\n",
-       "   1.5163177025101504e-7 - 49.73031462109581im\n",
-       "  -4.434989437077981e-16 + 0.0im              \n",
-       "     -0.5125699903925122 + 0.0im              \n",
-       "     -0.5125699903925128 + 0.0im              \n",
-       " -1.3050957308954483e-18 + 0.0im              "
+       "                     0.0 + 0.0im               \n",
+       "                     0.0 + 0.0im               \n",
+       "     -0.0890016251036162 + 56.42497174846761im \n",
+       "     -0.0890016251036162 - 56.42497174846761im \n",
+       "     -0.0890016251035376 + 56.424971278291636im\n",
+       "     -0.0890016251035376 - 56.424971278291636im\n",
+       " -4.6806306991199734e-18 + 0.0im               \n",
+       "      -0.423573229018982 + 0.0im               \n",
+       "    -0.42357322901914884 + 0.0im               \n",
+       "   3.503446817228818e-16 + 0.0im               "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,14 +203,14 @@
     "    return A, A_filtered, eigenvalues\n",
     "end\n",
     "\n",
-    "removed_indexes = [1, 4, 8]\n",
+    "removed_indexes = [1, 7]\n",
     "A, A_filtered, eigenvalues = jacobian_eigenvalues(open_loop_entry_vehicle_simplified_dynamics, X_0, removed_indexes)\n",
     "eigenvalues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -204,19 +219,19 @@
      "data": {
       "text/plain": [
        "10×2 Array{Complex{Float64},2}:\n",
-       "     0.707205+0.0im     0.629348+0.0im\n",
-       "    -0.707008+0.0im    -0.629172+0.0im\n",
-       "  -5.07488e-7+0.0im  4.70227e-14+0.0im\n",
-       " -2.85052e-20+0.0im  -2.93146e-5+0.0im\n",
-       " -2.85132e-20+0.0im  -2.93228e-5+0.0im\n",
-       " -3.13645e-16+0.0im    -0.322585+0.0im\n",
-       "  3.13557e-16+0.0im     0.322495+0.0im\n",
-       "   -9.013e-40+0.0im  6.98192e-22+0.0im\n",
-       "  1.99484e-24+0.0im   3.00516e-5+0.0im\n",
-       "  7.84265e-25+0.0im   3.00599e-5+0.0im"
+       "     0.707055+0.0im     -0.651059+0.0im\n",
+       "     0.707158+0.0im     -0.651153+0.0im\n",
+       " -2.30177e-10+0.0im  -6.10935e-16+0.0im\n",
+       "  1.50452e-22+0.0im   -1.25362e-5+0.0im\n",
+       "  -1.5043e-22+0.0im    1.25343e-5+0.0im\n",
+       " -3.30947e-18+0.0im      0.275771+0.0im\n",
+       " -3.30995e-18+0.0im      0.275811+0.0im\n",
+       "  1.80503e-44+0.0im    -4.067e-23+0.0im\n",
+       "  6.37668e-28+0.0im    2.12399e-5+0.0im\n",
+       " -1.60757e-27+0.0im   -2.12369e-5+0.0im"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,26 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "10-element Array{Complex{Float64},1}:\n",
-       "                     0.0 + 0.0im               \n",
-       "                     0.0 + 0.0im               \n",
-       "    1.516322827299632e-7 + 49.730320108296716im\n",
-       "    1.516322827299632e-7 - 49.730320108296716im\n",
-       "   1.5163228539449847e-7 + 49.73031462102122im \n",
-       "   1.5163228539449847e-7 - 49.73031462102122im \n",
-       "     -0.5125699903935347 + 0.0im               \n",
-       "      -0.512569990393537 + 0.0im               \n",
-       " -2.4128236393795028e-14 + 0.0im               \n",
-       "   2.168259135608778e-14 + 0.0im               "
+       "                   0.0 + 0.0im                   \n",
+       "                   0.0 + 0.0im                   \n",
+       "  -0.08900162510050169 + 56.42497174815732im     \n",
+       "  -0.08900162510050169 - 56.42497174815732im     \n",
+       "  -0.08900162510041931 + 56.424971277981385im    \n",
+       "  -0.08900162510041931 - 56.424971277981385im    \n",
+       "  -0.42357322902521727 + 0.0im                   \n",
+       "   -0.4235732290253853 + 0.0im                   \n",
+       " 2.049957323216384e-16 + 1.7424849595823525e-14im\n",
+       " 2.049957323216384e-16 - 1.7424849595823525e-14im"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +317,7 @@
        "max_eigenvalue (generic function with 1 method)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -374,7 +389,7 @@
    ],
    "source": [
     "num_nodes = 100\n",
-    "removed_indexes = [1, 4, 8]\n",
+    "removed_indexes = [1, 7]\n",
     "plot_eigenvalues(params, removed_indexes, num_nodes)"
    ]
   },
@@ -450,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,9 +476,9 @@
       "UndefVarError: aerodynamics_coefficents not defined",
       "",
       "Stacktrace:",
-      " [1] #plot_center_of_pressure#47(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[64]:11",
+      " [1] #plot_center_of_pressure#16(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[9]:11",
       " [2] (::getfield(Main, Symbol(\"#kw##plot_center_of_pressure\")))(::NamedTuple{(:display,),Tuple{Bool}}, ::typeof(plot_center_of_pressure), ::Dict{String,Any}, ::Int64) at ./none:0",
-      " [3] top-level scope at In[64]:29"
+      " [3] top-level scope at In[9]:29"
      ]
     }
    ],
@@ -511,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -522,9 +537,9 @@
       "UndefVarError: aerodynamics_coefficents not defined",
       "",
       "Stacktrace:",
-      " [1] #plot_aerodynamics_ceofficients#48(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[65]:12",
-      " [2] plot_aerodynamics_ceofficients(::Dict{String,Any}, ::Int64) at ./In[65]:2",
-      " [3] top-level scope at In[65]:30"
+      " [1] #plot_aerodynamics_ceofficients#17(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[10]:12",
+      " [2] plot_aerodynamics_ceofficients(::Dict{String,Any}, ::Int64) at ./In[10]:2",
+      " [3] top-level scope at In[10]:30"
      ]
     }
    ],
@@ -570,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -581,9 +596,9 @@
       "UndefVarError: aerodynamics_coefficents not defined",
       "",
       "Stacktrace:",
-      " [1] #plot_aerodynamics_ceofficients#48(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[65]:12",
+      " [1] #plot_aerodynamics_ceofficients#17(::Bool, ::Function, ::Dict{String,Any}, ::Int64) at ./In[10]:12",
       " [2] (::getfield(Main, Symbol(\"#kw##plot_aerodynamics_ceofficients\")))(::NamedTuple{(:display,),Tuple{Bool}}, ::typeof(plot_aerodynamics_ceofficients), ::Dict{String,Any}, ::Int64) at ./none:0",
-      " [3] top-level scope at In[66]:30"
+      " [3] top-level scope at In[11]:30"
      ]
     }
    ],
@@ -644,8 +659,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "8e18de52054743408dd94b6c9145406e",
-   "lastKernelId": "c70f9b38-0108-4dab-b97f-32b2504d9201"
+   "lastCommId": "b15f92c29dfd441780cefbe5c076c876",
+   "lastKernelId": "61746d95-ca48-459a-9a96-c48888ae23a8"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
